[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsalt"
version = "0.2.0"
description = "Simulate network lasers on quantum graphs using the SALT approximation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Alexis Arnaudon", email = "alexis.arnaudon@epfl.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "scipy>=1.2.0",
    "networkx>=2.5",
    "matplotlib>=3.3.0",
    "scikit-image",
    "tables",
    "pandas>=2.0",
    "pydantic>=2",
    "tqdm",
    "h5py",
    "numpy",
    "luigi",
    "pyyaml",
    "seaborn",
    "dir-content-diff",
    "pulp",
]

[project.optional-dependencies]
test = ["mock", "pytest"]

[tool.setuptools.packages.find]
include = ["netsalt*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["doc", "examples"]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle errors+warnings (E, W), isort (I), bugbear (B),
# comprehensions (C4), pyupgrade (UP). Docstring rules (D) stay off for now;
# the codebase has mixed docstring styles and enforcing them is a separate PR.
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long - enforced by the formatter instead
    "E741",  # ambiguous variable name (physics uses l, k, m, etc.)
    "B008",  # function call in default argument (used in luigi tasks)
    "B905",  # zip without strict= - requires a semantic audit, separate PR
    "B007",  # unused loop control variable - mostly intentional (indices)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"netsalt/__init__.py" = ["F401"]  # re-exports

[tool.ruff.format]
line-ending = "lf"
