[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netsalt"
version = "0.2.0"
description = "Simulate network lasers on quantum graphs using the SALT approximation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Alexis Arnaudon", email = "alexis.arnaudon@epfl.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "scipy>=1.2.0",
    "networkx>=2.5",
    "matplotlib>=3.3.0",
    "scikit-image",
    "tables",
    "pandas>=2.0",
    "pydantic>=2",
    "tqdm",
    "h5py",
    "numpy",
    "pyyaml",
    "seaborn",
    "dir-content-diff",
    "pulp",
]

[project.optional-dependencies]
test = ["mock", "pytest", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["netsalt*"]

[tool.pytest.ini_options]
# Coverage is opt-in (pass --cov=netsalt) so the fast default test loop
# isn't slowed by coverage instrumentation.

[tool.coverage.run]
source = ["netsalt"]
# Plotting and the pipeline orchestration are end-to-end surfaces covered
# by the functional test; the interesting correctness surface is the core
# compute package. Keeping the report focused on that so the number
# reflects code we actually unit-test.
omit = [
    "netsalt/plotting.py",
    "netsalt/pipeline.py",
    "netsalt/__main__.py",
]

[tool.coverage.report]
# Only pragma-marked lines count as "excluded"; everything else we see
# as uncovered if it didn't execute under the test suite.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 1
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["doc", "examples", "benchmark"]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle errors+warnings (E, W), isort (I), bugbear (B),
# comprehensions (C4), pyupgrade (UP). Docstring rules (D) stay off for now;
# the codebase has mixed docstring styles and enforcing them is a separate PR.
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",  # line too long - enforced by the formatter instead
    "E741",  # ambiguous variable name (physics uses l, k, m, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"netsalt/__init__.py" = ["F401"]  # re-exports

[tool.ruff.format]
line-ending = "lf"
